[project]
name = "db-to-df"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adbc-driver-postgresql>=1.10.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]
